--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -1,7 +1,7 @@
 if ( NOT ldms_USE_SYSTEM_LIBEVENT )
   add_subdirectory( libevent )
-  set( EVENT_LIBRARIES "event" CACHE INTERNAL "Project-local build of libevent" FORCE PARENT_SCOPE )
+  set( EVENT_LIBRARIES "event" CACHE INTERNAL "Project-local build of libevent" FORCE )
   set( EVENT_INCLUDE_DIRS
     "${ldms_SOURCE_DIR}/util/libevent/include;${ldms_BINARY_DIR}/util/libevent/include;${ldms_SOURCE_DIR}/util/libevent"
-    CACHE INTERNAL "Project-local libevent includes" FORCE PARENT_SCOPE )
+    CACHE INTERNAL "Project-local libevent includes" FORCE )
 endif ( NOT ldms_USE_SYSTEM_LIBEVENT )
