Fix module linking on Mac OS X.
Dependent libraries must be included for plugins.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,4 +131,5 @@ foreach( plugin ${ldms_plugins} )
   if ( ${${plugin}_LIBRARIES} )
     target_link_libraries( ${plugin} ${${plugin}_LIBRARIES} )
   endif()
+  target_link_libraries( ${plugin} ldms )
 endforeach()
