Miscellaneous fixes for LDMS including:
- I could not make libevent-1.4 thread-safe. I have migrated everything
  to libevent-2. This means we will have to build it on distros that
  don't have libevent-2.

- There was a missing dependency on libun.a from ldmsd and ldmsctl.

- ldmsctl was leaving /var/run/ldmsctl/$PID files around. Absent SIGKILL
  these files will be cleaned up automatically now.

- The transport switch was leaving semaphore files around in /dev/shm.
  These would accumulate until you had many millions of them at which
  point collisions would occur and an LDMS application would fail due
  to an inability to allocate a semaphore. These local file names are
  now unlinked immediately after the semaphore is created.

- Applications that failed to call ldms_release_xprt would leave the
  transport and associated semaphore local file hanging around. A shared
  library cleanup function has been added to release dangling transport
  instances.

Signed-off-by: Tom Tucker <tom@ogc.us>

--- a/Makefile.am
+++ b/Makefile.am
@@ -74,7 +74,7 @@ lib_LTLIBRARIES = src/libldms.la $(SOCK_la) $(RDMA_la) $(MEMINFO_la) $(GEMINFO_l
 
 src_libldms_la_SOURCES = src/ldms.c src/ldms_sock.c src/ldms_xprt.c \
 		src/ogc_rbt.c
-src_libldms_la_LIBADD = -ldl -lpthread
+src_libldms_la_LIBADD = -ldl -lpthread -levent -levent_pthreads
 src_libldms_la_DEPENDENCIES = $(srcdir)/src/libldms.map
 
 libldmsincludedir = $(includedir)/ldms
@@ -87,9 +87,11 @@ src_ldms_ls_LDADD = $(top_builddir)/src/libldms.la
 
 src_ldmsd_SOURCES = src/ldmsd.c src/ldmsd_cfg.c
 src_ldmsd_LDADD = $(top_builddir)/src/libldms.la -L$(top_builddir) -lun -levent
+src_ldmsd_DEPENDENCIES = $(top_builddir)/libun.a
 
 src_ldmsctl_SOURCES = src/ldmsctl.c
 src_ldmsctl_LDFLAGS = $(top_builddir)/src/libldms.la -L$(top_builddir) -lun -lreadline -ltermcap
+src_ldmsctl_DEPENDENCIES = $(top_builddir)/libun.a
 
 EXTRA_DIST = include ldms-utils.spec.in ldms-utils.spec \
 	autogen.sh \
