--- a/configure.in
+++ b/configure.in
@@ -39,6 +39,7 @@ AC_ARG_ENABLE(mmap, [  --disable-mmap     Disable peristent local data sets (i.e
 
 dnl Checks for programs
 AC_PROG_CC
+AC_PROG_CXX
 AC_CHECK_SIZEOF(long)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
