--- a/hwlocutils/Core.in
+++ b/hwlocutils/Core.in
@@ -1,11 +1,27 @@
 Core
 procinterrupts/Cpu(LVAL)_0
-procstatutil/cpu(LVAL)_user_raw
-procstatutil/cpu(LVAL)_sys_raw
-procstatutil/cpu(LVAL)_idle_raw
+procinterrupts/Cpu(LVAL)_1
+procinterrupts/Cpu(LVAL)_8
+procinterrupts/Cpu(LVAL)_9
+procinterrupts/Cpu(LVAL)_12
+procinterrupts/Cpu(LVAL)_16
+procinterrupts/Cpu(LVAL)_18
+procinterrupts/Cpu(LVAL)_19
+procinterrupts/Cpu(LVAL)_21
+procinterrupts/Cpu(LVAL)_23
+procinterrupts/Cpu(LVAL)_43
+procinterrupts/Cpu(LVAL)_44
+procinterrupts/Cpu(LVAL)_NMI
+procinterrupts/Cpu(LVAL)_LOC
+procinterrupts/Cpu(LVAL)_SPU
+procinterrupts/Cpu(LVAL)_PMI
+procinterrupts/Cpu(LVAL)_PND
+procinterrupts/Cpu(LVAL)_RES
+procinterrupts/Cpu(LVAL)_CAL
+procinterrupts/Cpu(LVAL)_TLB
+procinterrupts/Cpu(LVAL)_TRM
+procinterrupts/Cpu(LVAL)_THR
 procinterrupts/Cpu(LVAL)_MCE
-
-
-
-
-
+procinterrupts/Cpu(LVAL)_MCP
+procinterrupts/Cpu(LVAL)_ERR
+procinterrupts/Cpu(LVAL)_MIS
