--- a/hwlocutils/Machine.in
+++ b/hwlocutils/Machine.in
@@ -1,8 +1,53 @@
 Machine
 meminfo/MemTotal 
 meminfo/MemFree 
+meminfo/Buffers
+meminfo/Cached
+meminfo/SwapCached
+meminfo/Active
+meminfo/Inactive
+meminfo/Active(anon)
+meminfo/Inactive(anon)
+meminfo/Active(file)
+meminfo/Inactive(file)
+meminfo/Unevictable
+meminfo/Mlocked
+meminfo/SwapTotal
+meminfo/SwapFree
+meminfo/Dirty
+meminfo/Writeback
+meminfo/AnonPages
+meminfo/Mapped
+meminfo/Shmem
+meminfo/Slab
+meminfo/SReclaimable
+meminfo/SUnreclaim
+meminfo/KernelStack
+meminfo/PageTables
+meminfo/NFS_Unstable
+meminfo/Bounce
+meminfo/WritebackTmp
+meminfo/CommitLimit
+meminfo/Committed_AS
+meminfo/VmallocTotal
+meminfo/VmallocUsed
+meminfo/VmallocChunk
+meminfo/HardwareCorrupted
+meminfo/HugePages_Total
+meminfo/HugePages_Free
+meminfo/HugePages_Rsvd
+meminfo/HugePages_Surp
+meminfo/Hugepagesize
+meminfo/DirectMap4k
+meminfo/DirectMap2M
 procstatutil/cpu_user_raw
+procstatutil/cpu_nice_raw
 procstatutil/cpu_sys_raw
 procstatutil/cpu_idle_raw
+procstatutil/cpu_iowait_raw
+procstatutil/cpu_irq_raw
+procstatutil/cpu_softirq_raw
+procstatutil/cpu_steal_raw
+procstatutil/cpu_guest_raw
 
 
