--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@ INCLUDES = -I$(top_builddir)/include/ -I$(srcdir)/include -I$(includedir) \
 	-I$(includedir)/infiniband -I/usr/lib64/glib-2.0/include -I/usr/include/glib-2.0  
 
 
-sbin_PROGRAMS = src/ldmsd src/ldms_ls src/ldmsctl src/sedc_to_ldms src/hwlocldms_ls 
+sbin_PROGRAMS = src/ldmsd src/ldms_ls src/ldmsctl src/hwlocldms_ls 
 
 noinst_LIBRARIES = libun.a
 
@@ -120,10 +120,6 @@ src_ldmsd_DEPENDENCIES = $(top_builddir)/libun.a
 src_ldmsctl_SOURCES = src/ldmsctl.c
 src_ldmsctl_LDFLAGS = $(top_builddir)/src/libldms.la -L$(top_builddir) -lun -lreadline -ltermcap
 src_ldmsctl_DEPENDENCIES = $(top_builddir)/libun.a
-
-src_sedc_to_ldms_SOURCES = src/sedc_to_ldms.cxx
-src_sedc_to_ldms_LDFLAGS = $(top_builddir)/src/libldms.la -L$(top_builddir) -lun -lreadline -ltermcap
-src_sedc_to_ldms_DEPENDENCIES = $(top_builddir)/libun.a
 
 src_hwlocldms_ls_SOURCES = src/hwlocldms_ls.c
 src_hwlocldms_ls_LDADD = $(top_builddir)/src/libldms.la $(top_builddir)/src/libmetricmap.la -L/usr/lib64/glib-2.0/lib -lglib-2.0
